--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 //file:noinspection GrMethodMayBeStatic
 plugins {
-    id "fabric-loom" version "1.3.+"
+    id "fabric-loom" version "1.3-SNAPSHOT"
 
     id "io.github.juuxel.loom-vineflower" version "1.+" // Vineflower, a better decompiler
     id "io.github.p03w.machete" version "1.1.4" // automatic jar compressing on build
