--- a/gradle.properties
+++ b/gradle.properties
@@ -40,34 +40,22 @@ night_config_version = 3.6.3
 jsr305_version = 3.0.2
 
 # Compat
-# https://modrinth.com/mod/cc-tweaked/versions
-cc_version = 1.106.1
 # for CC - https://modrinth.com/mod/cloth-config/versions
 cloth_version = 12.0.109+fabric
-
 # https://modrinth.com/mod/jei/versions
-jei_version = 15.2.0.22
-# https://modrinth.com/mod/rei/versions
-rei_version = 12.0.626
-# https://modrinth.com/mod/emi/versions
-emi_version = 1.0.9+1.20.1
-
-# https://modrinth.com/mod/botania
-botania_version = 1.19.2-436-FABRIC
+jei_version = 16.0.0.28
 # https://modrinth.com/mod/modmenu/versions
-modmenu_version = 7.1.0
-# https://modrinth.com/mod/sandwichable/versions
-sandwichable_version = 1.3.1+1.20.1
+modmenu_version = 8.0.0
 # https://modrinth.com/mod/sodium
-sodium_version = mc1.20-0.4.10
+sodium_version = mc1.20-0.5.3
 # https://github.com/emilyploszaj/trinkets/releases/
-trinkets_version = 3.7.0
+trinkets_version = 3.8.0
 # for Trinkets - https://modrinth.com/mod/cardinal-components-api/versions
-cca_version = 5.2.1
+cca_version = 5.3.0
 
 # Whether CC: Tweaked should be enabled in dev or not
 cc_enabled = false
 # What recipe viewer to use ('emi', 'rei', or 'jei'. if you change it, don't push it)
-recipe_viewer = emi
+recipe_viewer = jei
 # comma-separated list of test mods to enable in dev. 'none' to use none.
 test_mods = none
