Remove Compat Mods

--- a/build.gradle
+++ b/build.gradle
@@ -107,10 +107,10 @@ def devEnv(DependencyHandler deps) {
 def compat(DependencyHandler deps) {
     // deps.modCompileOnly("cc.tweaked:cc-tweaked-$minecraft_version-fabric-api:$cc_version")
 
-    deps.modCompileOnly("vazkii.botania:Botania:$botania_version") { transitive = false }
-    deps.modCompileOnly("com.terraformersmc:modmenu:$modmenu_version")
-    deps.modCompileOnly("maven.modrinth:sandwichable:$sandwichable_version")
-    deps.modCompileOnly("maven.modrinth:sodium:$sodium_version")
+    // deps.modCompileOnly("vazkii.botania:Botania:$botania_version") { transitive = false }
+    // deps.modCompileOnly("com.terraformersmc:modmenu:$modmenu_version")
+    // deps.modCompileOnly("maven.modrinth:sandwichable:$sandwichable_version")
+    // deps.modCompileOnly("maven.modrinth:sodium:$sodium_version")
 
     deps.modCompileOnly("dev.emi:trinkets:$trinkets_version")
     // for Trinkets
