--- a/gradle.properties
+++ b/gradle.properties
@@ -32,7 +32,7 @@ reach_entity_attributes_version = 2.4.0
 registrate_version = 1.3.62-MC1.20.1
 milk_lib_version = 1.3.61
 
-port_lib_version = 2.1.1163+1.20.1
+port_lib_version = 2.1.1118+23w32a
 # adding a module also requires adding a dependency to the FMJ
 port_lib_modules = accessors,base,entity,extensions,fake_players,networking,obj_loader,tags,transfer,models,tool_actions,client_events,brewing
 
